--- a/gatsby-theme-element-design/package.json
+++ b/gatsby-theme-element-design/package.json
@@ -6,6 +6,7 @@
     "peerDependencies": {
         "gatsby": "^5.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "gatsby-theme-bayer-auth":"*"
     }
 }
