--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-source-drupal": "^6.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-theme-bayer-auth": "*",
     "gatsby-theme-element-design": "*",
